fix nav z-index bug

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -6,8 +6,8 @@
 .v-label.error--text
 	animation none !important
 
-.v-toolbar--clipped
-	z-index 5
+nav
+	z-index 5 !important
 
 table.sample-table
 	width 100%
